# hallucination

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  baseline.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt
configs/: data_pipeline.yaml  default.yaml
data/: README.md  SOURCES.md
data/bench/: knowledge_bench_private.csv  knowledge_bench_private_scores.csv
data/processed/: train_merged.csv
data/supplemental/: labeled_qa_diverse_v1.csv
data/validation/: manual_labeled_sample.csv
docs/: COMPETITION_RULES.md  END_TO_END_DATA.md  TESTING_JURY.md
model/: README.md
notebooks/: README.md
scripts/: append_corp300_to_supplemental.py  audit_train_csv.py  build_train_data.sh  check_constraints.py  check_no_public_benchmark_overlap.py  install.sh  llm_judge_optional.py  measure_performance.py  reproduce_features_from_csv.py  run_api.sh  score_private.sh  test_api_client.py  train.sh  train_cross_encoder.sh  verify_solution.sh
src/hallucination_detector/: __init__.py  benchmark.py  cli.py  columns_util.py  detection_timing.py  pipeline.py  score_csv.py  settings.py  train.py
src/hallucination_detector/api/: __init__.py  app.py  schemas.py  web_ui.py
src/hallucination_detector/api/static/: index.html
src/hallucination_detector/data/: __init__.py  build.py  dataset_contract.py  hf_sources.py  normalize.py  source_tags.py  synthetic.py
src/hallucination_detector/tabular/: __init__.py  extractor.py  scorer.py  train.py
