[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-detector"
version = "0.1.0"
description = "Offline hallucination scoring for prompt–response pairs (PR-AUC + latency)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1.0",
  "sentence-transformers>=3.0.0",
  "transformers>=4.36.0",
  "pandas>=2.0.0",
  "pyyaml>=6.0.0",
  "scikit-learn>=1.3.0",
  "tqdm>=4.65.0",
  "numpy>=1.24.0",
  "datasets>=2.14.0",
  "lightgbm>=4.0.0",
  "scipy>=1.10.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0"]
judge = ["openai>=1.0.0"]
api = ["httpx>=0.27.0"]

[project.scripts]
hallucination-detector = "hallucination_detector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hallucination_detector = ["api/static/*.html", "api/static/fonts/*"]
